--- a/package.json
+++ b/package.json
@@ -4,6 +4,25 @@
     "unit": "jest _e2e.test"
   },
   "dependencies": {
-    "jest": "^21.2.1"
+    "aws-sdk": "^2.187.0",
+    "babel-eslint": "^8.2.1",
+    "babel-runtime": "^6.26.0",
+    "dateformat": "^3.0.2",
+    "eslint": "^4.17.0",
+    "eslint-plugin-jest": "^21.12.0",
+    "hashids": "^1.1.4",
+    "jest": "^21.2.1",
+    "joi": "^13.1.2",
+    "jsonwebtoken": "^8.2.0",
+    "moment": "^2.21.0",
+    "neo4j-driver": "^1.5.3",
+    "pg": "^7.4.1",
+    "ramda": "^0.25.0",
+    "serverless": "^1.26.0",
+    "serverless-domain-manager": "^2.3.6",
+    "serverless-plugin-split-stacks": "^1.4.1",
+    "short-uuid": "^2.3.4",
+    "source-map-support": "^0.4.18",
+    "uuid": "^3.2.1"
   }
 }
